--- a/public/index.html
+++ b/public/index.html
@@ -162,7 +162,7 @@
 
     //save data to database
     function save_data(data) {
-        url = "http://node-express-env2.eba-tkcvuff5.us-east-2.elasticbeanstalk.com/data"
+        url = "http://node-express-env3.eba-usbkzyzs.us-east-2.elasticbeanstalk.com/data"
         var xhr = new XMLHttpRequest();
         xhr.open("POST", url, true);
         xhr.setRequestHeader('Content-Type', 'application/json');
