--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
 
     category = "zoo animals";
     //var items = ["leopard", "chimp", "beetle", "llama", "hyena", "mouse", "horse", "goat", "zebra", "antelope", "sea lion", "fox", "deer", "tarantula", "bat", "meerkat", "buffalo", "giraffe", "bull", "whale", "rabbit", "lion", "hippo", "baboon", "bird", "monkey", "snake", "tiger", "panther", "kangaroo", "owl", "elephant", "otter", "rhino", "cheetah", "gazelle", "alligator", "penguin", "panda", "parrot", "eagle", "polar bear", "koala", "ostrich", "crocodile", "dolphin", "lemur", "turtle", "gorilla", "wolf", "shark", "cow", "peacock", "jaguar", "camel", "platypus", "flamingo", "duck", "sloth", "seal", "grizzly bear", "lizard", "fish"];
-    var items = [];
+    var items = ['Mcdonalds', 'Burger King', 'Wendys', 'Taco Bell', 'Applebees', 'Chilis', 'Olive Garden', 'Arbys', 'Pizza Hut', 'Chipotle', 'TGI Fridays', 'Subway', 'Red Lobster', 'Chick Fil A', 'Kentucky Fried Chicken', 'Outback Steakhouse', 'Red Robin', 'Dennys', 'Cheesecake Factory', 'Panera', 'Buffalo Wild Wings', 'Popeyes', 'Dominos', 'IHOP', 'Dairy Queen', 'Five Guys', 'Hardees', 'Panda Express', 'Starbucks', 'Cracker Barrel', 'Jimmy Johns', 'Sonic', 'Jack in the Box', 'Ruby Tuesdays', 'PF Changs', 'Hooters', 'Papa Johns', 'Texas Roadhouse', 'Little Ceasars', 'Dunkin Donuts', 'Long John Silvers', 'Maggianos'];
+
     var unshuffledDescriptors = ["think", "like", "popular", "many locations", "unique", "healthy", "brightly colored logo", "lively", "variety", "well decorated", "expensive", "quick", "casual"]
     //var unshuffledDescriptors = ["large", "furry", "rare", "weird", "wild", "fast", "aggressive", "exotic", "dangerous", "active", "social", "smart", "graceful", "colorful", "patterned", "cute", "scary", "beautiful", "loud", "heavy", "tall"];
     //var unshuffledDescriptors = ["has large feet relative to its body size", "quiet", "has good hearing", "has long hair", "sleeps very little"];
@@ -93,7 +94,7 @@
             ],
         };
         timeline.push(trial1);  
-
+        /*
         trial2 = {
             var: item = myItems[i],
             type: 'survey-multi-choice',
@@ -112,6 +113,7 @@
                 { prompt: "How often do you think about this animal (for any reason)?", name: animal + ', think', options: ["very rarely", "rarely", "an average amount", "often", "very often"], required: "true"},
             ]
         };
+        */
         //timeline.push(trial2);
     };
 
