--- a/public/index.html
+++ b/public/index.html
@@ -87,17 +87,17 @@
                 { prompt: statements[descriptors[0]], name: item + ', ' + descriptors[0], labels: opts, required: true},
                 { prompt: statements[descriptors[1]], name: item + ', ' + descriptors[1], labels: opts,  required: true},
                 { prompt: statements[descriptors[2]], name: item + ', ' + descriptors[2], labels: opts, required: true},
-                { prompt: statements[descriptors[3]], name: item + ', ' + descriptors[3], labels: opts, required: true},
-                { prompt: statements[descriptors[4]], name: item + ', ' + descriptors[4], labels: opts, required: true},
-                { prompt: statements[descriptors[5]], name: item + ', ' + descriptors[5], labels: opts, required: true},
-                { prompt: statements[descriptors[6]], name: item + ', ' + descriptors[6], labels: opts,  required: true},
-                { prompt: statements[descriptors[7]], name: item + ', ' + descriptors[7], labels: opts, required: true},
-                { prompt: statements[descriptors[8]], name: item + ', ' + descriptors[8], labels: opts, required: true},
-                { prompt: statements[descriptors[9]], name: item + ', ' + descriptors[9], labels: opts, required: true},
-                { prompt: statements[descriptors[10]], name: item + ', ' + descriptors[10], labels: opts, required: true},
-                { prompt: statements[descriptors[11]], name: item + ', ' + descriptors[11], labels: opts,  required: true},
-                { prompt: statements[descriptors[12]], name: item + ', ' + descriptors[12], labels: opts, required: true},
-                { prompt: statements[descriptors[13]], name: item + ', ' + descriptors[13], labels: opts, required: true}
+                { prompt: statements[descriptors[3]], name: item + ', ' + descriptors[3], labels: opts, required: true}
+                //{ prompt: statements[descriptors[4]], name: item + ', ' + descriptors[4], labels: opts, required: true},
+                //{ prompt: statements[descriptors[5]], name: item + ', ' + descriptors[5], labels: opts, required: true},
+                //{ prompt: statements[descriptors[6]], name: item + ', ' + descriptors[6], labels: opts,  required: true},
+                //{ prompt: statements[descriptors[7]], name: item + ', ' + descriptors[7], labels: opts, required: true},
+                //{ prompt: statements[descriptors[8]], name: item + ', ' + descriptors[8], labels: opts, required: true},
+                //{ prompt: statements[descriptors[9]], name: item + ', ' + descriptors[9], labels: opts, required: true},
+                //{ prompt: statements[descriptors[10]], name: item + ', ' + descriptors[10], labels: opts, required: true},
+                //{ prompt: statements[descriptors[11]], name: item + ', ' + descriptors[11], labels: opts,  required: true},
+                //{ prompt: statements[descriptors[12]], name: item + ', ' + descriptors[12], labels: opts, required: true},
+                //{ prompt: statements[descriptors[13]], name: item + ', ' + descriptors[13], labels: opts, required: true}
             ],
         };
         timeline.push(trial1);  
