--- a/public/index.html
+++ b/public/index.html
@@ -15,16 +15,18 @@
     <body></body>
     <script>
 
-    category = "vegetables";
+    category = "sports";
 
     //var items = ["leopard", "chimp", "beetle", "llama", "hyena", "mouse", "horse", "goat", "zebra", "antelope", "sea lion", "fox", "deer", "tarantula", "bat", "meerkat", "buffalo", "giraffe", "bull", "whale", "rabbit", "lion", "hippo", "baboon", "bird", "monkey", "snake", "tiger", "panther", "kangaroo", "owl", "elephant", "otter", "rhino", "cheetah", "gazelle", "alligator", "penguin", "panda", "parrot", "eagle", "polar bear", "koala", "ostrich", "crocodile", "dolphin", "lemur", "turtle", "gorilla", "wolf", "shark", "cow", "peacock", "jaguar", "camel", "platypus", "flamingo", "duck", "sloth", "seal", "grizzly bear", "lizard", "fish"];
-    var items = ['Mcdonalds', 'Burger King', 'Wendys', 'Taco Bell', 'Applebees', 'Chilis', 'Olive Garden', 'Arbys', 'Pizza Hut', 'Chipotle', 'TGI Fridays', 'Subway', 'Red Lobster', 'Chick Fil A', 'Kentucky Fried Chicken', 'Outback Steakhouse', 'Red Robin', 'Dennys', 'Cheesecake Factory', 'Panera', 'Buffalo Wild Wings', 'Popeyes', 'Dominos', 'IHOP', 'Dairy Queen', 'Five Guys', 'Hardees', 'Panda Express', 'Starbucks', 'Cracker Barrel', 'Jimmy Johns', 'Sonic', 'Jack in the Box', 'Ruby Tuesdays', 'PF Changs', 'Hooters', 'Papa Johns', 'Texas Roadhouse', 'Little Ceasars', 'Dunkin Donuts', 'Long John Silvers', 'Maggianos'];
+    //var items = ['Mcdonalds', 'Burger King', 'Wendys', 'Taco Bell', 'Applebees', 'Chilis', 'Olive Garden', 'Arbys', 'Pizza Hut', 'Chipotle', 'TGI Fridays', 'Subway', 'Red Lobster', 'Chick Fil A', 'Kentucky Fried Chicken', 'Outback Steakhouse', 'Red Robin', 'Dennys', 'Cheesecake Factory', 'Panera', 'Buffalo Wild Wings', 'Popeyes', 'Dominos', 'IHOP', 'Dairy Queen', 'Five Guys', 'Hardees', 'Panda Express', 'Starbucks', 'Cracker Barrel', 'Jimmy Johns', 'Sonic', 'Jack in the Box', 'Ruby Tuesdays', 'PF Changs', 'Hooters', 'Papa Johns', 'Texas Roadhouse', 'Little Ceasars', 'Dunkin Donuts', 'Long John Silvers', 'Maggianos'];
     //var items = ['carrots', 'broccoli', 'lettuce', 'peas', 'potatoes', 'onions', 'cauliflower', 'corn', 'green beans', 'tomatoes', 'cucumbers', 'spinach', 'squash', 'celery', 'peppers', 'eggplant', 'cabbage', 'asparagus', 'brussel sprouts', 'kale', 'turnips', 'zucchini', 'garlic', 'pumpkins', 'beets', 'mushrooms', 'radish', 'okra', 'yams', 'sweet potatoes', 'arugula', 'sprouts', 'artichoke', 'parsnips', 'bok choy', 'lima beans', 'avocado', 'snap peas', 'leeks', 'collard greens'];
-    
+    var items = ['baseball', 'football', 'soccer', 'tennis', 'hockey', 'basketball', 'running', 'golf', 'volleyball', 'swimming', 'cricket', 'lacrosse', 'boxing', 'rugby', 'gymnastics', 'wrestling', 'ice skating', 'softball', 'bowling', 'skiing', 'polo', 'badminton', 'racecar driving', 'horseback riding', 'fencing', 'cheerleading', 'ping pong', 'biking', 'squash', 'curling', 'diving', 'raquetball', 'field hockey', 'water polo', 'handball', 'dance', 'snowboarding'];
+    var unshuffledDescriptors = ['think', 'like', 'popular', 'high energy', 'dangerous', 'strenuous', 'spectators', 'competitive', 'agility', 'expensive', 'space', 'been around', 'learn', 'flexibility']
     //var unshuffledDescriptors = ["colorful", "think","dishes","popular", "likes", "available", "healthy", "fragrant", "warm", "sweet", "large", "crunchy", "heavy", "calories"];
     //var unshuffledDescriptors = ["think", "likes", "popular", "many locations", "is unique", "healthy", "brightly colored logo", "lively", "variety", "well decorated", "expensive", "quick", "casual"]
-    var unshuffledDescriptors = ["interesting side dishes", "soft food", "cold food", "desserts"];
-    var statements = {"interesting side dishes": "This restaurant serves interesting side dishes.", "soft food": "This restaurant serves mostly soft food.", "cold food": "This restaurant serves mostly cold food.", "desserts": "This restaurant serves a variety of desserts."}
+    //var unshuffledDescriptors = ["interesting side dishes", "soft food", "cold food", "desserts"];
+    var statements = {'think': "You think about this sport often.", 'like': "You like this sport.", 'popular': "This sport is popular.", 'high energy':"This sport is high energy.", 'dangerous':"This sport is dangerous.", 'strenuous':"This sport is strenuous.", 'spectators':"This sport draws many spectators.", 'competitive':"This sport is competitive.", 'agility':"This sport requires agility.", 'expensive':"This sport is expensive to play.", 'space':"This sport requires a large space.", 'been around':"This sport has been around for a long time.", 'learn':"This sport is easy to learn.", 'flexibility':"This sport requires flexibility."}
+    //var statements = {"interesting side dishes": "This restaurant serves interesting side dishes.", "soft food": "This restaurant serves mostly soft food.", "cold food": "This restaurant serves mostly cold food.", "desserts": "This restaurant serves a variety of desserts."}
     //var unshuffledDescriptors = ["large", "furry", "rare", "weird", "wild", "fast", "aggressive", "exotic", "dangerous", "active", "social", "smart", "graceful", "colorful", "patterned", "cute", "scary", "beautiful", "loud", "heavy", "tall"];
     //var unshuffledDescriptors = ["has large feet relative to its body size", "quiet", "has good hearing", "has long hair", "sleeps very little"];
     var descriptors = jsPsych.randomization.sampleWithoutReplacement(unshuffledDescriptors, unshuffledDescriptors.length);
@@ -87,17 +89,17 @@
                 { prompt: statements[descriptors[0]], name: item + ', ' + descriptors[0], labels: opts, required: true},
                 { prompt: statements[descriptors[1]], name: item + ', ' + descriptors[1], labels: opts,  required: true},
                 { prompt: statements[descriptors[2]], name: item + ', ' + descriptors[2], labels: opts, required: true},
-                { prompt: statements[descriptors[3]], name: item + ', ' + descriptors[3], labels: opts, required: true}
-                //{ prompt: statements[descriptors[4]], name: item + ', ' + descriptors[4], labels: opts, required: true},
-                //{ prompt: statements[descriptors[5]], name: item + ', ' + descriptors[5], labels: opts, required: true},
-                //{ prompt: statements[descriptors[6]], name: item + ', ' + descriptors[6], labels: opts,  required: true},
-                //{ prompt: statements[descriptors[7]], name: item + ', ' + descriptors[7], labels: opts, required: true},
-                //{ prompt: statements[descriptors[8]], name: item + ', ' + descriptors[8], labels: opts, required: true},
-                //{ prompt: statements[descriptors[9]], name: item + ', ' + descriptors[9], labels: opts, required: true},
-                //{ prompt: statements[descriptors[10]], name: item + ', ' + descriptors[10], labels: opts, required: true},
-                //{ prompt: statements[descriptors[11]], name: item + ', ' + descriptors[11], labels: opts,  required: true},
-                //{ prompt: statements[descriptors[12]], name: item + ', ' + descriptors[12], labels: opts, required: true},
-                //{ prompt: statements[descriptors[13]], name: item + ', ' + descriptors[13], labels: opts, required: true}
+                { prompt: statements[descriptors[3]], name: item + ', ' + descriptors[3], labels: opts, required: true},
+                { prompt: statements[descriptors[4]], name: item + ', ' + descriptors[4], labels: opts, required: true},
+                { prompt: statements[descriptors[5]], name: item + ', ' + descriptors[5], labels: opts, required: true},
+                { prompt: statements[descriptors[6]], name: item + ', ' + descriptors[6], labels: opts,  required: true},
+                { prompt: statements[descriptors[7]], name: item + ', ' + descriptors[7], labels: opts, required: true},
+                { prompt: statements[descriptors[8]], name: item + ', ' + descriptors[8], labels: opts, required: true},
+                { prompt: statements[descriptors[9]], name: item + ', ' + descriptors[9], labels: opts, required: true},
+                { prompt: statements[descriptors[10]], name: item + ', ' + descriptors[10], labels: opts, required: true},
+                { prompt: statements[descriptors[11]], name: item + ', ' + descriptors[11], labels: opts,  required: true},
+                { prompt: statements[descriptors[12]], name: item + ', ' + descriptors[12], labels: opts, required: true},
+                { prompt: statements[descriptors[13]], name: item + ', ' + descriptors[13], labels: opts, required: true}
             ],
         };
         timeline.push(trial1);  
