--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,8 @@
                 { prompt: statements[descriptors[10]], name: item + ', ' + descriptors[10], labels: opts, required: true},
                 { prompt: statements[descriptors[11]], name: item + ', ' + descriptors[11], labels: opts,  required: true},
                 { prompt: statements[descriptors[12]], name: item + ', ' + descriptors[12], labels: opts, required: true},
+                { prompt: statements[descriptors[13]], name: item + ', ' + descriptors[13], labels: opts, required: true},
+                { prompt: statements[descriptors[13]], name: item + ', ' + descriptors[13], labels: opts, required: true},
                 { prompt: statements[descriptors[13]], name: item + ', ' + descriptors[13], labels: opts, required: true}
             ],
         };
